--- a/src/styles.css
+++ b/src/styles.css
@@ -297,13 +297,13 @@ body {
   } */
   progress {
   	display:inline-block;
-  	width:190px;
+  	width:150px;
   	height:20px;
   	margin:0;
   	background:none;
   	border: 0;
-  	border-radius: 15px;
-  	text-align: left;
+  	border-radius: 2px;
+  	text-align: center;
   	position:relative;
   	font-family: Arial, Helvetica, sans-serif;
   	font-size: 0.8em;
@@ -319,10 +319,9 @@ body {
   progress::-webkit-progress-value {
   	display:inline-block;
   	float:left;
-  	height:11px;
+  	height:8px;
   	margin:0px -10px 0 0;
-  	background: #F70;
-  	border-radius: 15px;
+  	background: #de0000;
   	box-shadow:0px 0px 6px #777 inset;
   }
   progress:after {
@@ -330,5 +329,5 @@ body {
   	padding:0;
   	display:inline-block;
   	float:left;
-  	content: attr(value) '%';
+  	/* content: attr(value) '%'; */
   }
