--- a/src/styles.css
+++ b/src/styles.css
@@ -56,7 +56,7 @@ border-color: transparent;
   padding-right: 25px;
 }
 
-#shipType, #statcard, a {
+#shipType, #statCard, a {
   background: black;
   color: #00ECFF;
   font-family: 'Orbitron', sans-serif;
@@ -194,8 +194,7 @@ a {
   left: 0;
   bottom: 0;
   width: 100%;
-  }
-
+}
   progress#health {
   	display:inline-block;
   	width:150px;
